<resources>
    <string name="app_name">ft_hangouts</string>
    <string name="add_phone_number_text">전화번호</string>
    <string name="add_email_text">이메일</string>
    <string name="add_gender_text">성별</string>
    <string name="add_relation_text">관계</string>
    <string name="add_name_text">이름</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="contact_detail_title_text">연락처 정보</string>
    <string name="selected_color_text">선택된 색상 :</string>
    <string name="app_bar_setting_default_text">초기화</string>
    <string name="language_select">언어 변경</string>
    <string name="header_color_change">앱 바 색상 변경</string>
    <string name="main_title">연락처</string>
    <string name="call">통화</string>
    <string name="sms">문자</string>
    <string name="edit">편집</string>
    <string name="delete">삭제</string>
    <string name="check_delete_message">연락처를 영구히 삭제하시겠습니까?</string>
    <string name="detail_permission_deny_message">권한을 설정을 거절 하셨습니다.\n몇가지 기능이 작동 하지 않을 수 있습니다.</string>
    <string name="cannot_use_call_feature">전화기능을 사용할 수 없습니다.</string>
    <string name="cannot_use_sms_feature">SMS 기능을 사용할 수 없습니다.</string>
    <string name="message_of_sms_send_failure">문자 메세지 전송이 실패 했습니다. 재전송 하시겠습니까?</string>
    <string name="ok">확인</string>
    <string name="language">언어</string>
    <string name="default_text">기본</string>
    <string name="system_default_language">시스템 기본 언어</string>
    <string name="user_settings">사용자 설정</string>
    <string name="korean">한국어</string>
    <string name="english">English</string>
    <string name="permission_request">권한 요청</string>
    <string name="call_permission_request">전화를 걸기 위해서 전화 접근 권한이 필요합니다.</string>
    <string name="request_sms_permission">문자 메시지를 전송하고 읽기 위해 관련 권한이 필요 합니다. 요청 하시겠습니까?</string>
    <string name="sms_permission_deny">문자 권한 요청이 거절 되었습니다.\n권한 설정 후 다시 이용 해주세요.</string>
    <string name="call_permission_deny">전화 권한 요청이 거절 되었습니다.\n권한 설정 후 다시 이용 해주세요.</string>
    <string name="contact_edit_title">연락처 편집</string>
    <string name="language_change_message">언어를 변경하려면 앱을 재시작해야합니다. 재시작 하시겠습니까?</string>
    <string name="search_hint">검색</string>
    <string name="database_read_error">데이터를 불러오는데 실패했습니다.</string>
    <string name="database_create_error">데이터 저장에 실패했습니다.</string>
    <string name="database_update_error">데이터 수정에 실패했습니다.</string>
    <string name="database_delete_error">데이터 삭제에 실패했습니다.</string>
    <string name="empty_name_or_phone">이름과 전화번호를 입력해주세요.</string>
    <string name="contact_add_title">연락처 추가</string>
</resources>