<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    tools:context=".ContactAddActivity">

    <TextView
        android:id="@+id/add_phone_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/add_phone_number_text"
        app:layout_constraintBottom_toBottomOf="@+id/add_edit_phone_number_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_edit_phone_number_text" />

    <TextView
        android:id="@+id/add_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/add_email_text"
        app:layout_constraintBottom_toBottomOf="@+id/add_edit_email_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_edit_email_text" />

    <TextView
        android:id="@+id/add_gender_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/add_gender_text"
        app:layout_constraintBottom_toBottomOf="@+id/add_gender_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_gender_edit_text" />

    <TextView
        android:id="@+id/add_relation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/add_relation_text"
        app:layout_constraintBottom_toBottomOf="@+id/add_relation_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_relation_edit_text" />

    <TextView
        android:id="@+id/add_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/add_name_text"
        app:layout_constraintBottom_toBottomOf="@+id/add_name_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_name_edit_text" />

    <EditText
        android:id="@+id/add_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/add_name_text"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_edit_phone_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/add_phone_number_text"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_name_edit_text" />

    <EditText
        android:id="@+id/add_edit_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/add_email_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_edit_phone_number_text" />

    <EditText
        android:id="@+id/add_gender_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/add_gender_text"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_edit_email_text" />

    <EditText
        android:id="@+id/add_relation_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/add_relation_text"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_gender_edit_text" />

    <Button
        android:id="@+id/add_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_save_button"
        app:layout_constraintBottom_toBottomOf="@+id/add_cancel_button"
        app:layout_constraintEnd_toStartOf="@+id/add_cancel_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_cancel_button" />

    <Button
        android:id="@+id/add_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/add_cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/add_relation_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/add_relation_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
