<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:padding="10dp"
    tools:context=".ui.edit.ContactEditActivity">

    <TextView
        android:id="@+id/contact_edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="연락처 편집"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/title_style" />

    <androidx.cardview.widget.CardView
        android:id="@+id/name_edit_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/contact_edit_title"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/edit_name_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="12dp"
                app:tint="@color/contact_image_default_color"
                android:src="@drawable/baseline_person_24" />

            <EditText
                android:id="@+id/edit_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/add_name_text"
                android:textSize="24sp"
                android:inputType="textPersonName" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/phone_number_edit_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_edit_card"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/edit_phone_number_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="12dp"
                app:tint="@color/contact_image_default_color"
                android:src="@drawable/baseline_call_24" />

            <EditText
                android:id="@+id/edit_phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/add_phone_number_text"
                android:textSize="24sp"
                android:inputType="phone" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/email_edit_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/phone_number_edit_card"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/edit_email_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="12dp"
                app:tint="@color/contact_image_default_color"
                android:src="@drawable/baseline_email_32" />

            <EditText
                android:id="@+id/edit_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/add_email_text"
                android:textSize="24sp"
                android:inputType="textEmailAddress" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/gender_edit_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_edit_card"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/edit_gender_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="12dp"
                app:tint="@color/contact_image_default_color"
                android:src="@drawable/baseline_man_4_32" />

            <EditText
                android:id="@+id/edit_gender_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/add_gender_text"
                android:textSize="24sp"
                android:inputType="textEmailAddress" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/relation_edit_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gender_edit_card"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/edit_relation_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="12dp"
                app:tint="@color/contact_image_default_color"
                android:src="@drawable/baseline_diversity_3_32" />

            <EditText
                android:id="@+id/edit_relation_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/add_relation_text"
                android:textSize="24sp"
                android:inputType="textEmailAddress" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/main_background"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/edit_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            style="@style/contact_add_button_style" />

        <TextView
            android:id="@+id/edit_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/save"
            style="@style/contact_add_button_style" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>